--- a/Zeus/ViewControllers/我的/FeedbackViewController.storyboard
+++ b/Zeus/ViewControllers/我的/FeedbackViewController.storyboard
@@ -16,13 +16,58 @@
                     <view key="view" contentMode="scaleToFill" id="adG-gf-cfw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3eW-QK-0pZ">
+                                <rect key="frame" x="0.0" y="144" width="375" height="463"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outlet property="delegate" destination="bdx-TU-hvB" id="Myq-LN-4L2"/>
+                                </connections>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我们会细心阅读每一份反馈" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y4L-Zi-zDD">
+                                <rect key="frame" x="91.5" y="94" width="192" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Y4L-Zi-zDD" firstAttribute="top" secondItem="DlH-UD-PFX" secondAttribute="bottom" constant="30" id="Awk-QG-22t"/>
+                            <constraint firstItem="3eW-QK-0pZ" firstAttribute="leading" secondItem="adG-gf-cfw" secondAttribute="leading" id="XJk-G3-jQf"/>
+                            <constraint firstItem="3eW-QK-0pZ" firstAttribute="top" secondItem="DlH-UD-PFX" secondAttribute="bottom" constant="80" id="ajy-sw-nUq"/>
+                            <constraint firstAttribute="trailing" secondItem="3eW-QK-0pZ" secondAttribute="trailing" id="avn-I1-F8M"/>
+                            <constraint firstItem="2i5-ek-yg2" firstAttribute="top" secondItem="3eW-QK-0pZ" secondAttribute="bottom" constant="60" id="h69-qy-OJz"/>
+                            <constraint firstItem="Y4L-Zi-zDD" firstAttribute="centerX" secondItem="adG-gf-cfw" secondAttribute="centerX" id="wqe-RF-pJM"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="反馈" id="Cuu-GX-WFK">
+                        <barButtonItem key="rightBarButtonItem" style="done" id="0dx-pu-qB8">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="A0d-8k-VYo">
+                                <rect key="frame" x="276" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="完成"/>
+                                <connections>
+                                    <action selector="done_Touch:" destination="bdx-TU-hvB" eventType="touchUpInside" id="AMQ-ng-1Va"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="doneButton" destination="A0d-8k-VYo" id="FsS-2m-w6N"/>
+                        <outlet property="feedBackTextView" destination="3eW-QK-0pZ" id="xVx-54-1Wr"/>
+                        <outlet property="textViewBottomConstraint" destination="h69-qy-OJz" id="uqw-Ra-El2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YDA-65-aJz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="268" y="215"/>
+            <point key="canvasLocation" x="267.5" y="214.5"/>
         </scene>
     </scenes>
 </document>
